2000-08-04  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.h, bggame.cc, sigame.cc: add some resources, namely palettes 
	and shape files. Removed the silly get_extra_shape_file()
	* exult.cc, browser.*, gamewin.*: implement a better shape browser.
	Better help screen
	* data/credits.txt: Text for Exult credits
	* tools/txt2cc: Tool which generates a C++ function which returns
	a vector containing all lines in the source text. Used to compile the
	credits and quotes into Exult.
	* game.cc: implement Exult quotes & credits. Return to menu at the
	end of scrolling.

2000-08-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc: Failed endgame
	* usecode.cc: Show credits after successful endgame. Quit after 
	endgame.

2000-08-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc, sigame.cc, game.cc: Credits & Quotes

2000-08-03  Tristan Tarrant  <nadir@users.sourceforge.net>

	* bggame.cc, sigame.cc: Implement main menu (SI's is incomplete)
	* gamewin.cc: move creation of 'gamedat' to separate function to 
	be invoked by main menu

2000-08-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Dead bodies decay after several game-clock hours.

2000-08-01  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.h, gamewin.cc: if in BG we show ENDSHAPE.FLX, if in SI we show 
	PAPERDOL.VGA
	* exult.cc: Default resolution is 320x200 with 2x filter. This is to 
	be as close as possible to the original.

2000-08-01  Tristan Tarrant  <nadir@users.sourceforge.net>

	* gamewin.*, exult.cc, usecode.cc: decided to not store the Game 
	object inside gamewin, but use the static get_game of the Game 
	class instead. "There can be only one" (TM)

2000-08-01  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.*, bggame.cc, sigame.cc: implemented shape lists. SI now has
	placeholder intro/endgame sequences (it plays the proper FLIcs, but
	nothing else really).
	* gumps.*: use shape lists instead of hardcoded constants. Most