@@ -43,7 +43,7 @@ Actor::Actor
 	    attack_mode(nearest), schedule(0), dormant(1), two_handed(0),
 	    two_fingered(0),		//+++++ Added this. Correct? -WJP
 	    light_sources(0),
-	    usecode_dir(0), flags(0), siflags(0), type_flags(0), action(0), frame_time(0),
+	    usecode_dir(0), siflags(0), type_flags(0), action(0), frame_time(0),
 	    next_path_time(0)
 	{
 	init();				// Clear rest of stuff.
